Fix Projects and Contact sections: resize images, remove overlap, improve layout and styling

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -3,166 +3,147 @@
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  width: 500px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  padding: 4rem 2rem;
 
   z-index: 10;
 
   margin-bottom: 10rem;
 
   @media (max-width: 700px) {
-    width: 400px;
+    padding: 3rem 2rem;
   }
 
   @media (max-width: 470px) {
-    width: 330px;
+    padding: 2rem 1.5rem;
   }
 
   @media (max-width: 400px) {
-    width: 260px;
+    padding: 2rem 1rem;
   }
 
   &__heading {
-    margin-top: -4rem !important;
-    margin-bottom: 6rem !important;
+    margin-top: 0;
+    margin-bottom: 4rem;
+    font-size: 4.5rem;
+    text-align: center;
+
+    @media (max-width: 900px) {
+      font-size: 4rem;
+      margin-bottom: 3rem;
+    }
+
+    @media (max-width: 700px) {
+      font-size: 3.5rem;
+      margin-bottom: 2.5rem;
+    }
+
     &:before {
-      position: absolute;
-      content: '';
-      border-bottom: 18px solid $color-red;
-      width: 21rem;
-      display: block;
-      margin: 0 auto;
-      position: relative;
-      left: 3.5rem;
-      top: 6.3rem;
-
-      z-index: -1;
-
-      @media (max-width: 770px) {
-        // width: 14rem;
-        border-bottom: 14px solid $color-red;
-      }
+      display: none;
     }
   }
 
   &__text {
     font-size: 1.8rem;
-    margin-bottom: 6rem;
+    margin-bottom: 3rem;
+    text-align: center;
   }
 
   &__form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
+    width: 100%;
+    max-width: 60rem;
 
     &-name,
     &-email {
-      margin-bottom: 6px;
-      padding: 1rem;
-      height: 4rem;
+      margin-bottom: 1.5rem;
+      padding: 1.2rem;
+      height: auto;
+      min-height: 4.5rem;
+      font-size: 1.6rem;
     }
 
     &-message {
-      height: 12rem;
-      padding: 1rem;
+      height: 14rem;
+      padding: 1.2rem;
+      margin-bottom: 2rem;
+      font-size: 1.6rem;
+    }
+
+    &-submit {
+      align-self: center;
+      position: relative;
+      padding: 1rem 2rem;
+      width: fit-content;
+
+      font-size: 1.6rem;
+      text-transform: uppercase;
+      font-weight: 700;
+      letter-spacing: 2px;
+      color: $color-text;
+      background-color: transparent;
+      border: 2px solid $color-red;
+      cursor: pointer;
+      transition: all 0.3s ease;
+
+      &:hover {
+        background-color: $color-red;
+        color: $color-background;
+      }
+
+      @media (max-width: 560px) {
+        padding: 0.8rem 1.5rem;
+        font-size: 1.4rem;
+      }
     }
 
     &-submit-2 {
       align-self: flex-start;
       margin-top: 0 !important;
     }
-
-    &-submit {
-      align-self: flex-start;
-      position: relative;
-      // margin-top: 1.5rem;
-      padding: 0.6rem 1rem;
-      width: fit-content;
-
-      font-size: 1.6rem;
-      text-transform: uppercase;
-      font-weight: 700;
-      letter-spacing: 3px;
-      // border-bottom: 2px solid $color-red;
-      z-index: 9;
-      cursor: pointer;
-
-      &:hover {
-        color: $color-background;
-        font-weight: 700;
-      }
-
-      &:after {
-        position: absolute;
-        content: '';
-        border-bottom: 2px solid $color-red;
-
-        width: calc(100% + 2rem);
-        // height: 100%;
-        left: -14%;
-        top: 0.5rem;
-        display: block;
-        margin: 0 auto;
-        position: relative;
-
-        transform-origin: bottom;
-        transition: all 0.2s;
-
-        // left: -8rem;
-
-        z-index: -1;
-      }
-
-      &:hover:after {
-        transform: scaleY(17.5);
-
-        @media (max-width: 1500px) {
-          transform: scaleY(16.5);
-        }
-
-        @media (max-width: 1200px) {
-          transform: scaleY(14);
-        }
-
-        @media (max-width: 770px) {
-          transform: scaleY(12.5);
-        }
-      }
-    }
   }
 
   & input,
   & textarea {
-    width: 500px;
+    width: 100%;
+    max-width: 60rem;
     resize: none;
     border: none;
     color: inherit;
     background-color: $color-background-light;
     font-size: 1.6rem;
-    font-family: monserrat, sans-serif;
+    font-family: montserrat, sans-serif;
 
-    border-left: 2px solid transparent;
-
+    border-left: 3px solid transparent;
     border-radius: 0;
+    transition: border-left-color 0.2s;
 
     @media (max-width: 700px) {
-      width: 400px;
+      max-width: 100%;
+      font-size: 1.5rem;
     }
 
     @media (max-width: 470px) {
-      width: 330px;
+      max-width: 100%;
+      font-size: 1.4rem;
     }
 
     @media (max-width: 400px) {
-      width: 260px;
+      max-width: 100%;
+      font-size: 1.3rem;
     }
 
     &:focus {
       outline: none;
+      border-left-color: $color-red;
     }
+
     &::placeholder {
       /* Chrome, Firefox, Opera, Safari 10.1+ */
       color: rgba($color-text, 0.6);
